<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context="de.blackoise.pimaticlocation.Settings"
    android:layout_width="match_parent" android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/Settings"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_host"
            android:id="@+id/textView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextHost"
            android:inputType="text" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_protocol"
        android:id="@+id/textView7"/>

    <Spinner
        android:id="@+id/spinnerProtocol"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:entries="@array/protocol_array"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_port"
        android:id="@+id/textView8"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPort"
        android:inputType="number" />

    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_user"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextUser"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_password"
            android:id="@+id/textView5"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTextPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_device_id"
            android:id="@+id/textView6"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDeviceID"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_interval"
            android:id="@+id/textView2"/>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editTextInterval"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_ms"
            android:id="@+id/textView3"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_interval_limit"
        android:id="@+id/textView12"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editTextIntervalLimit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_ms"
            android:id="@+id/textView11"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_priority"
            android:id="@+id/textView10"/>

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/priority_array"/>
    </LinearLayout>

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_report_address"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/checkBoxAddress"
        android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_auto_refresh"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/checkBoxRefresh"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_write_logfile"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/checkBoxLogfile"
        android:checked="false" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_test_and_save"
            android:id="@+id/SaveButton"
            android:onClick="OnClickSave" />

</LinearLayout>
</ScrollView>